--- a/Vue/package.json
+++ b/Vue/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "vue": "^3.2.38",
-    "vue-router": "^4.1.6"
+    "vue-router": "^4.1.6",
+    "vuedraggable": "^2.24.3"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.0.3",
