--- a/Vue/package.json
+++ b/Vue/package.json
@@ -7,8 +7,10 @@
     "preview": "vite preview --port 4173"
   },
   "dependencies": {
+    "@vuepic/vue-datepicker": "^3.5.3",
     "vue": "^3.2.38",
     "vue-router": "^4.1.6",
+    "vue-scratchcard": "^1.2.0-a",
     "vuedraggable": "^2.24.3"
   },
   "devDependencies": {
