--- a/Vue/package.json
+++ b/Vue/package.json
@@ -8,7 +8,9 @@
   },
   "dependencies": {
     "@vuepic/vue-datepicker": "^3.5.3",
+    "axios": "^1.2.2",
     "vue": "^3.2.38",
+    "vue-final-modal": "^3.4.10",
     "vue-router": "^4.1.6",
     "vue-scratchcard": "^1.2.0-a",
     "vuedraggable": "^2.24.3"
